2006-01-31  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JDesktopPane/constructor.java
	New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/awt/Container/getPreferredSize.java:
	New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JRootPane/RootLayout/preferredLayoutSize.java:
	Fixed copyright header and docs.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JRootPane/RootLayout/preferredLayoutSize.java:
	New test

2006-01-30  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/System/security.java: More new tests.

2006-01-30  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/lang/System/security.java: New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/minimumLayoutSize.java:
	New test

2006-01-30  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/testdata1,
	gnu/testlet/java/util/regex/Pattern/testdata2:
	Moved some cases from testdata2 to testdata1.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicListUI/updateLayoutStateNeeded.java:
	New test

2006-01-31  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java (test): Call new
	methods.
	(checkIsPrime65537): Clarified that the number is Fermat's F4 prime.
	(checkCryptoPrimes): New method.
	(checkIsPrime): Re-wrote to reduce amount of output.
	(checkIsNonPrime): New method.
	(checkSpeed): New method.
	(eulerTime): New method.
	(millerRabinTime): New method.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImp.java
	(testAddDifferentLayers): New test.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JLayeredPane/addImp.java
	New test.

2005-01-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Double/DoubleSetterTest.java: Cleaned up
	test name containing "Error".
